--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <p class="card-text">Desenvolva layouts responsivos de forma rápida e eficiente com o sistema de grid do
                 Bootstrap, proporcionando uma experiência consistente em diversos dispositivos</p>
             </div>
-            <div class="cardfooter border">postado há 1 hora</div>
+            <div class="cardfooter border bg-light"><spam class="mx-1">postado há 1 hora</spam></div>
           </div>
         </div>
 
@@ -69,7 +69,7 @@
               <p class="card-text">Aproveite uma biblioteca extensa de componentes pré-projetados do Bootstrap,
                 economizando tempo e esforço no desenvolvimento de interfaces atrativas</p>
             </div>
-            <div class="cardfooter border">postado há 2 dias</div>
+            <div class="cardfooter border bg-light"><spam class="mx-1">postado há 2 dias</spam></div>
           </div>
         </div>
 
@@ -81,7 +81,7 @@
               <p class="card-text">Beneficie-se da compatibilidade com os principais navegadores e da facilidade de
                 personalização, permitindo que o Bootstrap atenda às necessidades específicas do seu projeto</p>
             </div>
-            <div class="cardfooter border">postado há 1 semana</div>
+            <div class="cardfooter border bg-light"><spam class="mx-1">postado há 1 semana</spam></div>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="row mx-0 d-flex justify-content-center text-center my-4">
-      <h2 class="mb-5">Links de Importação</h2>
+      <h1 class="mb-5 mt-5 text-secondary">Links de Importação</h1>
       <div class="col-lg-8">
         <div class="row">
           <div class="col-sm-4">
@@ -270,7 +270,7 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Mensagem</label>
-            <input type="text" class="form-control " id="exampleInputPassword1" required style="height: 100px">
+            <textarea name="mensagem" id="form-control" cols="80" rows="5" class="border border-1 rounded" ></textarea>
           </div>
           <div class="mb-3">
             <button type="submit" class="btn btn-primary">Enviar</button>
