--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <h2 class="accordion-header" id="flush-headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Quais as vnatagens de usar o Boostrap?
+                Quais as vantagens de usar o Boostrap?
               </button>
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
