--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row m-0 mb-5">
         <div class="col-md-4 d-flex align-items-stretch">
           <div class="card m-1">
-            <img src="../BOOTSTRAP/midias.png" class="card-img-top img-fluid mt-0" alt="telas">
+            <img src="../BOOTSTRAP/midias.jpeg" class="card-img-top img-fluid mt-0" alt="telas">
             <div class="card-body">
               <h5 class="card-title">Agilidade na Responsividade</h5>
               <p class="card-text">Desenvolva layouts responsivos de forma rápida e eficiente com o sistema de grid do
@@ -63,7 +63,7 @@
 
         <div class="col-md-4 d-flex align-items-stretch">
           <div class="card m-1">
-            <img src="../BOOTSTRAP/midias.png" class="card-img-top img-fluid mt-0" alt="telas">
+            <img src="../BOOTSTRAP/midias.jpeg" class="card-img-top img-fluid mt-0" alt="telas">
             <div class="card-body">
               <h5 class="card-title">Componentes Prontos para Uso</h5>
               <p class="card-text">Aproveite uma biblioteca extensa de componentes pré-projetados do Bootstrap,
@@ -75,7 +75,7 @@
 
         <div class="col-md-4 d-flex align-items-stretch">
           <div class="card m-1">
-            <img src="../BOOTSTRAP/midias.png" class="card-img-top img-fluid mt-0" alt="telas">
+            <img src="../BOOTSTRAP/midias.jpeg" class="card-img-top img-fluid mt-0" alt="telas">
             <div class="card-body">
               <h5 class="card-title">Compatibilidade e Personalização</h5>
               <p class="card-text">Beneficie-se da compatibilidade com os principais navegadores e da facilidade de
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row m-0 mb-6">
         <div class="col-md-6 d-flex align-items-center justify-content-center">
-          <img src="../BOOTSTRAP/Dispositivos.png" class="img-fluid mt-5 w-75" alt="dispositivos">
+          <img src="../BOOTSTRAP/Dispositivos.jpg" class="img-fluid mt-5 w-75 bg-light" alt="dispositivos">
         </div>
         <div class="col-md-6">
           <h2 class="text-center m-5">O Bootstrap se ajusta elegantemente a telas de todos os tamanhos, proporcionando
